--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Security
 tls/
 
+# Build
+tmp/
+
 ### Go ###
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
