some code refactor

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ Temporary Items
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 
+### JetBrains ###
+.idea
+
 # Local History for Visual Studio Code
 .history/
 
